--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
                             <h1 class="brand-heading">Hey,I'm Nikhil</h1>
-                            <p class="intro-text">a Frontend developer</p>
+                            <p class="intro-text">A  Frontend developer</p>
                             <div class="direction-sign">
                                 <a href="#about" class="hand-link text-center">
                                     <i class="fa fa-angle-down property"></i>
@@ -61,7 +61,7 @@
             </div><!--end intro div-->
         </div>
 
-        <section id="about" class="content-section text-center">
+        <section id="about" class="content-section text-center"><!--section aboutme start-->
             <div class="row">
                 <div class="col-lg-6 col-lg-offset-3">
                     <div class="header-about text-center">
@@ -78,7 +78,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section><!--section aboutme end-->
 
         <div class="col-md-8 col-md-offset-2 work-title">
             <h1 class="title-work text-center"><b>work</b></h1>
