--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap-responsive.css">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic">
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -48,7 +49,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2">
-                            <h1 class="brand-heading">Hey,I'm Nikhil</h1>
+                            <h1 class="brand-heading"><b>Hey,I'm Nikhil</b></h1>
                             <p class="intro-text">A  Frontend developer</p>
                             <div class="direction-sign">
                                 <a href="#about" class="hand-link text-center">
@@ -75,6 +76,26 @@
                                 I consider myself as a quick learner and I like participating in an open discussion on varied topics, and interacting with number of people
                                 around. I am also proud at my decision making skills. I take decisions in seconds and never regret for that.
                             </p>
+                        <ul class="list-inline hire-padd-top">
+                            <li>
+                                <a href="https://www.linkedin.com/in/nikhil-mangal-86598b92?trk=nav_responsive_tab_profile" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                    <!--<span class="network-name">Linkedin</span>-->
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://github.com/nikmangal02" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-github"></i>
+                                    <!--<span class="network-name">GITHUB</span>-->
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://www.facebook.com/nmangal2" target="_blank" class="btn btn-default btn-lg">
+                                    <i class="fa fa-facebook"></i>
+                                    <!--<span class="network-name">FACEBOOK</span>-->
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -88,24 +109,70 @@
             <div class="container-fluid put-color">
                 <div class="work-padd">
                     <div class="row">
+                        <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-4">
+                            <img src="img/Group 5.png" class="img-responsive work-img-dimen">
+                        </div>
                         <div class="col-md-5 col-md-offset-1 col-sm-12">
                             <h2 class="text-center">Putboards</h2>
                             <p class="text-center">
-                                Putboard is a nice way to curate links from all over the web.Curate all your links at one place and categorise it with tags. You can even search through your links based on title or tags.
+                                <strong>Putboard</strong> is a nice way to curate links from all over the web.Curate all your links at one place and categorise it with tags. You can even search through your links based on title or tags.
                                 You can easily share your board with your loved ones. Putboard gives you options to create the private or public boards
                             </p>
                             <div class=" col-md-5 col-md-offset-1 col-sm-12 col-sm-offset-0 col-md-offset-0 view-btn text-center">
                                 <a href="https://github.com/nikmangal02/putboard2.0" target="_blank" class=" btn btn-more-info btn-lg">View code</a>
                             </div>
                         </div>
+                    </div>
+                    <hr>
+                    <div class="row padd-top">
                         <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-4">
-                            <img src="img/Group 5.png" class="img-responsive work-img-dimen">
+                            <img src="img/Group 4.png" class="img-responsive work-img-dimen">
+                        </div>
+                        <div class="col-md-5 col-md-offset-1 col-sm-12">
+                            <h2 class="text-center">Jodhpur-Rajasthan</h2>
+                            <p class="text-center">
+                                <strong>Jodhpur-Rajasthan</strong> is a static website which tells about the beauty of jodhpur.It also show the famous places in jodhpur.
+                                Jodhpur is a most favorite tourist destination.It helps tourist to explore the beauty of Jodhpur.
+                            </p>
+                            <div class=" col-md-5 col-md-offset-1 col-sm-12 col-sm-offset-0 col-md-offset-0 view-btn text-center">
+                                <a href="https://github.com/nikmangal02/jodhpur-rajasthan" target="_blank" class=" btn btn-more-info btn-lg">View code</a>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row padd-top">
+                        <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-4">
+                            <img src="img/Group 6.png" class="img-responsive work-img-dimen">
+                        </div>
+                        <div class="col-md-5 col-md-offset-1 col-sm-12">
+                            <h2 class="text-center">Portfolio Design</h2>
+                            <p class="text-center">
+                                <strong>Portfolio Design</strong> which shows the details of individuals.It is like a online portfolio.
+                            </p>
+                            <div class=" col-md-5 col-md-offset-1 col-sm-12 col-sm-offset-0 col-md-offset-0 view-btn text-center">
+                                <a href="https://github.com/nikmangal02/PortfolioDesign" target="_blank" class=" btn btn-more-info btn-lg">View code</a>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row padd-top">
+                        <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-4">
+                            <img src="img/Group 7.png" class="img-responsive work-img-dimen">
+                        </div>
+                        <div class="col-md-5 col-md-offset-1 col-sm-12">
+                            <h2 class="text-center">To-Do-List</h2>
+                            <p class="text-center">
+                                <strong>To-Do-List</strong> in which user can maintain the record of purchased item and items which are going to be buy with some details like price,quanity etc.
+                            </p>
+                            <div class=" col-md-8 col-md-offset-1 col-sm-12 col-sm-offset-0 col-md-offset-0 view-btn text-center">
+                                <a href="https://github.com/nikmangal02/laravel_to_do_list" target="_blank" class=" btn btn-more-info btn-lg">View code</a>
+                            </div>
                         </div>
                     </div>
                 </div>
                 </div>
             <hr>
-            <div class="container-fluid jodh-color">
+            <!--<div class="container-fluid jodh-color">
                 <div class="work-padd">
                     <div class="row">
                             <div class="col-md-5 col-md-offset-2 col-sm-12">
@@ -161,7 +228,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </section><!--section work end-->
 
         <section id="hire-me" class="contact container text-center footer-bg"><!--footer start-->
@@ -172,7 +239,7 @@
                     <p class="hire-padd-top">
                         <a href="mailto:nikmangal@gmail.com" class="mail-color">nikmangal@gmail.com</a>
                     </p>
-                    <ul class="list-inline banner-social-buttons hire-padd-top">
+                    <!--<ul class="list-inline banner-social-buttons hire-padd-top">
                         <li>
                             <a href="https://www.linkedin.com/in/nikhil-mangal-86598b92?trk=nav_responsive_tab_profile" target="_blank" class="btn btn-default btn-lg">
                                 <i class="fa fa-linkedin"></i>
@@ -191,7 +258,7 @@
                                 <span class="network-name">FACEBOOK</span>
                             </a>
                         </li>
-                    </ul>
+                    </ul>-->
                 </div>
             </div>
         </section><!--footer end-->
