--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
                                 I consider myself as a quick learner and I like participating in an open discussion on varied topics, and interacting with number of people
                                 around. I am also proud at my decision making skills. I take decisions in seconds and never regret for that.
                             </p>
-                        <ul class="list-inline hire-padd-top">
+                        <ul class="list-inline">
                             <li>
                                 <a href="https://www.linkedin.com/in/nikhil-mangal-86598b92?trk=nav_responsive_tab_profile" target="_blank" class="btn btn-default btn-lg">
                                     <i class="fa fa-linkedin" aria-hidden="true"></i>
-                                    <!--<span class="network-name">Linkedin</span>-->
                                 </a>
                             </li>
                             <li>
@@ -172,93 +171,16 @@
                 </div>
                 </div>
             <hr>
-            <!--<div class="container-fluid jodh-color">
-                <div class="work-padd">
-                    <div class="row">
-                            <div class="col-md-5 col-md-offset-2 col-sm-12">
-                            <img src="img/Group%204.png" class="img-responsive work-img-dimen">
-                        </div>
-                        <div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-4">
-                            <h2 class="text-center">Jodhpur-rajasthan</h2>
-                            <p class="text-center">
-                                Jodhpur-Rajasthan is a static website which tells about the beauty of jodhpur.It also show the famous places in jodhpur.
-                                Jodhpur is a most favorite tourist destination.It helps tourist to explore the beauty of Jodhpur.
-                            </p>
-                            <div class=" col-md-5 col-md-offset-1 col-sm-12 col-sm-offset-0 col-md-offset-0 view-btn text-center">
-                                <a href="https://github.com/nikmangal02/jodhpur-rajasthan" target="_blank" class=" btn btn-more-info btn-lg">View code</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <div class="container-fluid">
-                <div class="work-padd">
-                    <div class="row">
-                        <div class="col-md-5 col-md-offset-1 col-sm-12">
-                            <h2 class="text-center">Portfolio Design</h2>
-                            <p class="text-center">
-                                This is simple portfolio design which shows the details of individuals.It is like a online portfolio.
-                            </p>
-                            <div class=" col-md-5 col-md-offset-1 col-sm-12 col-sm-offset-0 col-md-offset-0 view-btn text-center">
-                                <a href="https://github.com/nikmangal02/PortfolioDesign" target="_blank" class=" btn btn-more-info btn-lg">View code</a>
-                            </div>
-                        </div>
-                        <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-4">
-                            <img src="img/Group%206.png" class="img-responsive work-img-dimen">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <div class="container-fluid">
-                <div class="work-padd">
-                    <div class="row">
-                        <div class="col-md-5 col-md-offset-2 col-sm-12">
-                            <img src="img/Group%207.png" class="img-responsive work-img-dimen">
-                        </div>
-                        <div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-4">
-                            <h2 class="text-center">To-Do-List</h2>
-                            <p class="text-center">
-                                To-Do-List in which user can maintain the record of purchased item and items which are going to be buy with some details like price,quanity etc.
-                            </p>
-                            <div class=" col-md-8 col-md-offset-1 col-sm-12 col-sm-offset-0 col-md-offset-0 view-btn text-center">
-                                <a href="https://github.com/nikmangal02/laravel_to_do_list" target="_blank" class=" btn btn-more-info btn-lg">View code</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>-->
         </section><!--section work end-->
 
         <section id="hire-me" class="contact container text-center footer-bg"><!--footer start-->
             <div class="row">
                 <div class="col-md-8 col-md-offset-2">
-                    <h2>HIRE ME!</h2>
+                    <h2 class="hire-padd-top hire-title">HIRE ME!</h2>
                     <p class="hire-padd-top">I might help you in tranforming your ideas into a real product</p>
                     <p class="hire-padd-top">
                         <a href="mailto:nikmangal@gmail.com" class="mail-color">nikmangal@gmail.com</a>
                     </p>
-                    <!--<ul class="list-inline banner-social-buttons hire-padd-top">
-                        <li>
-                            <a href="https://www.linkedin.com/in/nikhil-mangal-86598b92?trk=nav_responsive_tab_profile" target="_blank" class="btn btn-default btn-lg">
-                                <i class="fa fa-linkedin"></i>
-                                <span class="network-name">Linkedin</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/nikmangal02" target="_blank" class="btn btn-default btn-lg">
-                                <i class="fa fa-github"></i>
-                                <span class="network-name">GITHUB</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.facebook.com/nmangal2" target="_blank" class="btn btn-default btn-lg">
-                                <i class="fa fa-facebook"></i>
-                                <span class="network-name">FACEBOOK</span>
-                            </a>
-                        </li>
-                    </ul>-->
                 </div>
             </div>
         </section><!--footer end-->
