--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-4">
                             <img src="img/Group 5.png" class="img-responsive work-img-dimen">
                         </div>
-                        <div class="col-md-5 col-md-offset-1 col-sm-12">
+                        <div class="col-md-5 col-md-offset-1 col-sm-12  col-sm-offset-0  work-padd-right">
                             <h2 class="text-center">Putboards</h2>
                             <p class="text-center">
                                 <strong>Putboard</strong> is a nice way to curate links from all over the web.Curate all your links at one place and categorise it with tags. You can even search through your links based on title or tags.
@@ -127,7 +127,7 @@
                         <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-4">
                             <img src="img/Group 4.png" class="img-responsive work-img-dimen">
                         </div>
-                        <div class="col-md-5 col-md-offset-1 col-sm-12">
+                        <div class="col-md-5 col-md-offset-1 col-sm-12  col-sm-offset-0  work-padd-right">
                             <h2 class="text-center">Jodhpur-Rajasthan</h2>
                             <p class="text-center">
                                 <strong>Jodhpur-Rajasthan</strong> is a static website which tells about the beauty of jodhpur.It also show the famous places in jodhpur.
@@ -143,7 +143,7 @@
                         <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-4">
                             <img src="img/Group 6.png" class="img-responsive work-img-dimen">
                         </div>
-                        <div class="col-md-5 col-md-offset-1 col-sm-12">
+                        <div class="col-md-5 col-md-offset-1 col-sm-12 col-sm-offset-0  work-padd-right">
                             <h2 class="text-center">Portfolio Design</h2>
                             <p class="text-center">
                                 <strong>Portfolio Design</strong> which shows the details of individuals.It is like a online portfolio.
@@ -158,7 +158,7 @@
                         <div class="col-md-5 col-md-offset-1 col-sm-6 col-sm-offset-4">
                             <img src="img/Group 7.png" class="img-responsive work-img-dimen">
                         </div>
-                        <div class="col-md-5 col-md-offset-1 col-sm-12">
+                        <div class="col-md-5 col-md-offset-1 col-sm-12 col-sm-offset-0 work-padd-right">
                             <h2 class="text-center">To-Do-List</h2>
                             <p class="text-center">
                                 <strong>To-Do-List</strong> in which user can maintain the record of purchased item and items which are going to be buy with some details like price,quanity etc.
@@ -175,7 +175,7 @@
 
         <section id="hire-me" class="contact container text-center footer-bg"><!--footer start-->
             <div class="row">
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-8 col-md-offset-2  hire-padd-bott">
                     <h2 class="hire-padd-top hire-title">HIRE ME!</h2>
                     <p class="hire-padd-top">I might help you in tranforming your ideas into a real product</p>
                     <p class="hire-padd-top">
